2016-05-06 18:03-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/NSString.h: Add containsString:
	* Headers/GNUstepBase/GSVersionMacros.h: Add 10.10 and 10.11 macros.
	* Source/NSString.m: Add containsString: implementation.

2016-04-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAutoreleasePool.m:
	Check for a pool being deallocated when it has already been
	deallocated (and raise an exception).

2016-04-23  Marcus Mueller <znek@mulle-kybernetik.com>

	* Source/GSAvahiNetService.m: Avahi-based NSNetServices did crash
	upon publishing if Avahi daemon did not run. Hardened code for this
	case which also works correctly if daemon is started later on.

2016-04-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m:
	Remove redundant code.  Log domain names when debug is enabled.

2016-04-08 Riccardo Mottola <rm@gnu.org>

	* Source/NSUserDefaults.m:
	Skip nil domains explicitely and do not use nil values to look them up.

2016-04-04  Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Check for runloop integration hooks in libdispatch
	* configure
	* Headers/GNUstepBase/config.h.in
	* SSL/config.h.in
	* SSL/configure:
	Regenerate
	* Source/NSRunLoop.m: If available, monitor the file descriptor for
	the libdispatch main queue and drain it when it becomes readable.
	* Tests/base/NSRunLoop/dispatch.m
	* Tests/base/NSRunLoop/GNUmakefile.preamble:
	Tests for libdispatch runloop integration

2016-03-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSObject.h:
	* Headers/GNUstepBase/GNUstep.h:
	* Headers/GNUstepBase/GSConfig.h.in:
	* Headers/GNUstepBase/GSIArray.h:
	* Headers/GNUstepBase/GSIMap.h:
	* Source/Additions/GCDictionary.m:
	* Source/Additions/GSLock.m:
	* Source/Additions/GSMime.m:
	* Source/Additions/GSObjCRuntime.m:
	* Source/Additions/Unicode.m:
	* Source/GSArray.m:
	* Source/GSAttributedString.m:
	* Source/GSConcreteValueTemplate.m:
	* Source/GSCountedSet.m:
	* Source/GSDictionary.m: